fixed popup styles to work on mobile and desktop

--- a/assets/stylesheets/config/_responsive-short.scss
+++ b/assets/stylesheets/config/_responsive-short.scss
@@ -5,6 +5,10 @@
     display: none;
   }
 
+  #harassment .close_popup {
+    display: none;
+  }
+
   .footer-legend a.policy_page {
     display: inline-block;
   }
